translation-methods/lab3/src/gen/PrefixExprParser.java
package gen;// Generated from java-escape by ANTLR 4.11.1



import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PrefixExprParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PLUS=1, MINUS=2, MUL=3, DIV=4, NOT=5, XOR=6, AND=7, OR=8, GE=9, GT=10, 
		LE=11, LT=12, EQ=13, NEQ=14, IF=15, PRINT=16, BOTH=17, VAR=18, NUMBER=19, 
		ASSIGNMENT=20, NEWLINE=21;
	public static final int
		RULE_code = 0, RULE_blocksOfCode = 1, RULE_blockOfCode = 2, RULE_instruction = 3, 
		RULE_blockIf = 4, RULE_blockIfContinue = 5, RULE_expr = 6, RULE_logicalExpr = 7, 
		RULE_logicalBinaryOp = 8, RULE_logicalUnaryOp = 9, RULE_comparison = 10, 
		RULE_comparisonOp = 11, RULE_arithmeticExpr = 12, RULE_arithmeticBinaryOp = 13, 
		RULE_arithmeticUnaryOp = 14, RULE_print = 15, RULE_printOperands = 16, 
		RULE_assignment = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"code", "blocksOfCode", "blockOfCode", "instruction", "blockIf", "blockIfContinue", 
			"expr", "logicalExpr", "logicalBinaryOp", "logicalUnaryOp", "comparison", 
			"comparisonOp", "arithmeticExpr", "arithmeticBinaryOp", "arithmeticUnaryOp", 
			"print", "printOperands", "assignment"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'+'", "'-'", "'*'", "'/'", "'!'", "'^'", "'&'", "'|'", "'>='", 
			"'>'", "'<='", "'<'", "'=='", "'!='", "'if'", "'print'", "'both'", null, 
			null, "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PLUS", "MINUS", "MUL", "DIV", "NOT", "XOR", "AND", "OR", "GE", 
			"GT", "LE", "LT", "EQ", "NEQ", "IF", "PRINT", "BOTH", "VAR", "NUMBER", 
			"ASSIGNMENT", "NEWLINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PrefixExprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CodeContext extends ParserRuleContext {
		public String str;
		public BlocksOfCodeContext blocksOfCode;
		public BlocksOfCodeContext blocksOfCode() {
			return getRuleContext(BlocksOfCodeContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PrefixExprParser.EOF, 0); }
		public CodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_code; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExprListener ) ((PrefixExprListener)listener).enterCode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExprListener ) ((PrefixExprListener)listener).exitCode(this);
		}
	}

	public final CodeContext code() throws RecognitionException {
		CodeContext _localctx = new CodeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_code);

		        StringBuilder sb = new StringBuilder("def main():\n");
		    
		try {
			setState(40);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IF:
			case PRINT:
			case BOTH:
			case ASSIGNMENT:
				enterOuterAlt(_localctx, 1);
				{
				setState(36);
				((CodeContext)_localctx).blocksOfCode = blocksOfCode(1);

				        sb.append(((CodeContext)_localctx).blocksOfCode.str);
				    
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				setState(39);
				match(EOF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);

			        sb.append("\nmain()");
			        ((CodeContext)_localctx).str =  sb.toString();
			    
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlocksOfCodeContext extends ParserRuleContext {
		public int tabs;
		public String str;
		public BlockOfCodeContext blockOfCode;
		public BlocksOfCodeContext blocksOfCode;
		public BlockOfCodeContext blockOfCode() {
			return getRuleContext(BlockOfCodeContext.class,0);
		}
		public TerminalNode BOTH() { return getToken(PrefixExprParser.BOTH, 0); }
		public BlocksOfCodeContext blocksOfCode() {
			return getRuleContext(BlocksOfCodeContext.class,0);
		}
		public BlocksOfCodeContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public BlocksOfCodeContext(ParserRuleContext parent, int invokingState, int tabs) {
			super(parent, invokingState);
			this.tabs = tabs;
		}
		@Override public int getRuleIndex() { return RULE_blocksOfCode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExprListener ) ((PrefixExprListener)listener).enterBlocksOfCode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExprListener ) ((PrefixExprListener)listener).exitBlocksOfCode(this);
		}
	}

	public final BlocksOfCodeContext blocksOfCode(int tabs) throws RecognitionException {
		BlocksOfCodeContext _localctx = new BlocksOfCodeContext(_ctx, getState(), tabs);
		enterRule(_localctx, 2, RULE_blocksOfCode);

		        StringBuilder sb = new StringBuilder();
		    
		try {
			setState(50);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IF:
			case PRINT:
			case ASSIGNMENT:
				enterOuterAlt(_localctx, 1);
				{
				setState(42);
				((BlocksOfCodeContext)_localctx).blockOfCode = blockOfCode(_localctx.tabs);

				        sb.append(((BlocksOfCodeContext)_localctx).blockOfCode.str);
				    
				}
				break;
			case BOTH:
				enterOuterAlt(_localctx, 2);
				{
				setState(45);
				match(BOTH);
				setState(46);
				((BlocksOfCodeContext)_localctx).blockOfCode = blockOfCode(_localctx.tabs);
				setState(47);
				((BlocksOfCodeContext)_localctx).blocksOfCode = blocksOfCode(_localctx.tabs);

				        sb.append(((BlocksOfCodeContext)_localctx).blockOfCode.str).append("\n").append(((BlocksOfCodeContext)_localctx).blocksOfCode.str);
				    
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);

			        ((BlocksOfCodeContext)_localctx).str =  sb.toString();
			    
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockOfCodeContext extends ParserRuleContext {
		public int tabs;
		public String str;
		public BlockIfContext blockIf;
		public InstructionContext instruction;
		public BlockIfContext blockIf() {
			return getRuleContext(BlockIfContext.class,0);
		}
		public InstructionContext instruction() {
			return getRuleContext(InstructionContext.class,0);
		}
		public BlockOfCodeContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public BlockOfCodeContext(ParserRuleContext parent, int invokingState, int tabs) {
			super(parent, invokingState);
			this.tabs = tabs;
		}
		@Override public int getRuleIndex() { return RULE_blockOfCode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExprListener ) ((PrefixExprListener)listener).enterBlockOfCode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExprListener ) ((PrefixExprListener)listener).exitBlockOfCode(this);
		}
	}

	public final BlockOfCodeContext blockOfCode(int tabs) throws RecognitionException {
		BlockOfCodeContext _localctx = new BlockOfCodeContext(_ctx, getState(), tabs);
		enterRule(_localctx, 4, RULE_blockOfCode);
		try {
			setState(58);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IF:
				enterOuterAlt(_localctx, 1);
				{
				setState(52);
				((BlockOfCodeContext)_localctx).blockIf = blockIf(_localctx.tabs);

				        ((BlockOfCodeContext)_localctx).str =  ((BlockOfCodeContext)_localctx).blockIf.str;
				    
				}
				break;
			case PRINT:
			case ASSIGNMENT:
				enterOuterAlt(_localctx, 2);
				{
				setState(55);
				((BlockOfCodeContext)_localctx).instruction = instruction(_localctx.tabs);

				        ((BlockOfCodeContext)_localctx).str =  ((BlockOfCodeContext)_localctx).instruction.str;
				    
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstructionContext extends ParserRuleContext {
		public int tabs;
		public String str;
		public AssignmentContext assignment;
		public PrintContext print;
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public InstructionContext(ParserRuleContext parent, int invokingState, int tabs) {
			super(parent, invokingState);
			this.tabs = tabs;
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExprListener ) ((PrefixExprListener)listener).enterInstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExprListener ) ((PrefixExprListener)listener).exitInstruction(this);
		}
	}

	public final InstructionContext instruction(int tabs) throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState(), tabs);
		enterRule(_localctx, 6, RULE_instruction);
		try {
			setState(66);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ASSIGNMENT:
				enterOuterAlt(_localctx, 1);
				{
				setState(60);
				((InstructionContext)_localctx).assignment = assignment();

				        ((InstructionContext)_localctx).str =  "\t".repeat(_localctx.tabs) + ((InstructionContext)_localctx).assignment.str;
				    
				}
				break;
			case PRINT:
				enterOuterAlt(_localctx, 2);
				{
				setState(63);
				((InstructionContext)_localctx).print = print();

				        ((InstructionContext)_localctx).str =  "\t".repeat(_localctx.tabs) + ((InstructionContext)_localctx).print.str;
				    
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockIfContext extends ParserRuleContext {
		public int tabs;
		public String str;
		public LogicalExprContext logicalExpr;
		public BlocksOfCodeContext blocksOfCode;
		public BlockIfContinueContext blockIfContinue;
		public TerminalNode IF() { return getToken(PrefixExprParser.IF, 0); }
		public LogicalExprContext logicalExpr() {
			return getRuleContext(LogicalExprContext.class,0);
		}
		public BlocksOfCodeContext blocksOfCode() {
			return getRuleContext(BlocksOfCodeContext.class,0);
		}
		public BlockIfContinueContext blockIfContinue() {
			return getRuleContext(BlockIfContinueContext.class,0);
		}
		public BlockIfContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public BlockIfContext(ParserRuleContext parent, int invokingState, int tabs) {
			super(parent, invokingState);
			this.tabs = tabs;
		}
		@Override public int getRuleIndex() { return RULE_blockIf; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExprListener ) ((PrefixExprListener)listener).enterBlockIf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExprListener ) ((PrefixExprListener)listener).exitBlockIf(this);
		}
	}

	public final BlockIfContext blockIf(int tabs) throws RecognitionException {
		BlockIfContext _localctx = new BlockIfContext(_ctx, getState(), tabs);
		enterRule(_localctx, 8, RULE_blockIf);

		        StringBuilder sb = new StringBuilder();
		    
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(IF);
			setState(69);
			((BlockIfContext)_localctx).logicalExpr = logicalExpr();
			setState(70);
			((BlockIfContext)_localctx).blocksOfCode = blocksOfCode(_localctx.tabs + 1);
			setState(71);
			((BlockIfContext)_localctx).blockIfContinue = blockIfContinue(_localctx.tabs);

			        sb.append("\t".repeat(_localctx.tabs)).append("if").append(" ")
			            .append(((BlockIfContext)_localctx).logicalExpr.str).append(":")
			            .append("\n")
			            .append(((BlockIfContext)_localctx).blocksOfCode.str);

			        if (!((BlockIfContext)_localctx).blockIfContinue.str.isEmpty()) {
			            sb.append("\n")
			                .append("\t".repeat(_localctx.tabs)).append("el").append(((BlockIfContext)_localctx).blockIfContinue.str.trim());
			        }
			    
			}
			_ctx.stop = _input.LT(-1);

			        ((BlockIfContext)_localctx).str =  sb.toString();
			    
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockIfContinueContext extends ParserRuleContext {
		public int tabs;
		public String str;
		public BlockIfContext blockIf;
		public BlocksOfCodeContext blocksOfCode;
		public BlockIfContext blockIf() {
			return getRuleContext(BlockIfContext.class,0);
		}
		public BlocksOfCodeContext blocksOfCode() {
			return getRuleContext(BlocksOfCodeContext.class,0);
		}
		public BlockIfContinueContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public BlockIfContinueContext(ParserRuleContext parent, int invokingState, int tabs) {
			super(parent, invokingState);
			this.tabs = tabs;
		}
		@Override public int getRuleIndex() { return RULE_blockIfContinue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExprListener ) ((PrefixExprListener)listener).enterBlockIfContinue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExprListener ) ((PrefixExprListener)listener).exitBlockIfContinue(this);
		}
	}

	public final BlockIfContinueContext blockIfContinue(int tabs) throws RecognitionException {
		BlockIfContinueContext _localctx = new BlockIfContinueContext(_ctx, getState(), tabs);
		enterRule(_localctx, 10, RULE_blockIfContinue);
		try {
			setState(81);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{

				        ((BlockIfContinueContext)_localctx).str =  "";
				    
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(75);
				((BlockIfContinueContext)_localctx).blockIf = blockIf(_localctx.tabs);

				        ((BlockIfContinueContext)_localctx).str =  ((BlockIfContinueContext)_localctx).blockIf.str;
				    
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(78);
				((BlockIfContinueContext)_localctx).blocksOfCode = blocksOfCode(_localctx.tabs + 1);

				        StringBuilder sb = new StringBuilder();
				        sb.append("se").append(":").append("\n").append(((BlockIfContinueContext)_localctx).blocksOfCode.str);
				        ((BlockIfContinueContext)_localctx).str =  sb.toString();
				    
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public String str;
		public LogicalExprContext logicalExpr;
		public ArithmeticExprContext arithmeticExpr;
		public LogicalExprContext logicalExpr() {
			return getRuleContext(LogicalExprContext.class,0);
		}
		public ArithmeticExprContext arithmeticExpr() {
			return getRuleContext(ArithmeticExprContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExprListener ) ((PrefixExprListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExprListener ) ((PrefixExprListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_expr);
		try {
			setState(89);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(83);
				((ExprContext)_localctx).logicalExpr = logicalExpr();

				        ((ExprContext)_localctx).str =  ((ExprContext)_localctx).logicalExpr.str;
				    
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(86);
				((ExprContext)_localctx).arithmeticExpr = arithmeticExpr();

				        ((ExprContext)_localctx).str =  ((ExprContext)_localctx).arithmeticExpr.str;
				    
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LogicalExprContext extends ParserRuleContext {
		public String str;
		public LogicalBinaryOpContext logicalBinaryOp;
		public LogicalExprContext left;
		public LogicalExprContext right;
		public LogicalUnaryOpContext logicalUnaryOp;
		public LogicalExprContext logicalExpr;
		public ComparisonContext comparison;
		public Token VAR;
		public LogicalBinaryOpContext logicalBinaryOp() {
			return getRuleContext(LogicalBinaryOpContext.class,0);
		}
		public List<LogicalExprContext> logicalExpr() {
			return getRuleContexts(LogicalExprContext.class);
		}
		public LogicalExprContext logicalExpr(int i) {
			return getRuleContext(LogicalExprContext.class,i);
		}
		public LogicalUnaryOpContext logicalUnaryOp() {
			return getRuleContext(LogicalUnaryOpContext.class,0);
		}
		public ComparisonContext comparison() {
			return getRuleContext(ComparisonContext.class,0);
		}
		public TerminalNode VAR() { return getToken(PrefixExprParser.VAR, 0); }
		public LogicalExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicalExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExprListener ) ((PrefixExprListener)listener).enterLogicalExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExprListener ) ((PrefixExprListener)listener).exitLogicalExpr(this);
		}
	}

	public final LogicalExprContext logicalExpr() throws RecognitionException {
		LogicalExprContext _localctx = new LogicalExprContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_logicalExpr);
		try {
			setState(105);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case XOR:
			case AND:
			case OR:
				enterOuterAlt(_localctx, 1);
				{
				setState(91);
				((LogicalExprContext)_localctx).logicalBinaryOp = logicalBinaryOp();
				setState(92);
				((LogicalExprContext)_localctx).left = logicalExpr();
				setState(93);
				((LogicalExprContext)_localctx).right = logicalExpr();

				        ((LogicalExprContext)_localctx).str =  ((LogicalExprContext)_localctx).left.str + " " + ((LogicalExprContext)_localctx).logicalBinaryOp.str + " " + ((LogicalExprContext)_localctx).right.str;
				    
				}
				break;
			case NOT:
				enterOuterAlt(_localctx, 2);
				{
				setState(96);
				((LogicalExprContext)_localctx).logicalUnaryOp = logicalUnaryOp();
				setState(97);
				((LogicalExprContext)_localctx).logicalExpr = logicalExpr();

				        ((LogicalExprContext)_localctx).str =  ((LogicalExprContext)_localctx).logicalUnaryOp.str + "(" + ((LogicalExprContext)_localctx).logicalExpr.str + ")";
				    
				}
				break;
			case GE:
			case GT:
			case LE:
			case LT:
			case EQ:
			case NEQ:
				enterOuterAlt(_localctx, 3);
				{
				setState(100);
				((LogicalExprContext)_localctx).comparison = comparison();

				        ((LogicalExprContext)_localctx).str =  ((LogicalExprContext)_localctx).comparison.str;
				    
				}
				break;
			case VAR:
				enterOuterAlt(_localctx, 4);
				{
				setState(103);
				((LogicalExprContext)_localctx).VAR = match(VAR);

				        ((LogicalExprContext)_localctx).str =  (((LogicalExprContext)_localctx).VAR!=null?((LogicalExprContext)_localctx).VAR.getText():null);
				    
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LogicalBinaryOpContext extends ParserRuleContext {
		public String str;
		public TerminalNode XOR() { return getToken(PrefixExprParser.XOR, 0); }
		public TerminalNode OR() { return getToken(PrefixExprParser.OR, 0); }
		public TerminalNode AND() { return getToken(PrefixExprParser.AND, 0); }
		public LogicalBinaryOpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicalBinaryOp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExprListener ) ((PrefixExprListener)listener).enterLogicalBinaryOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExprListener ) ((PrefixExprListener)listener).exitLogicalBinaryOp(this);
		}
	}

	public final LogicalBinaryOpContext logicalBinaryOp() throws RecognitionException {
		LogicalBinaryOpContext _localctx = new LogicalBinaryOpContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_logicalBinaryOp);
		try {
			setState(113);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case XOR:
				enterOuterAlt(_localctx, 1);
				{
				setState(107);
				match(XOR);

				        ((LogicalBinaryOpContext)_localctx).str =  "xor";
				    
				}
				break;
			case OR:
				enterOuterAlt(_localctx, 2);
				{
				setState(109);
				match(OR);

				        ((LogicalBinaryOpContext)_localctx).str =  "or";
				    
				}
				break;
			case AND:
				enterOuterAlt(_localctx, 3);
				{
				setState(111);
				match(AND);

				        ((LogicalBinaryOpContext)_localctx).str =  "and";
				    
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LogicalUnaryOpContext extends ParserRuleContext {
		public String str;
		public TerminalNode NOT() { return getToken(PrefixExprParser.NOT, 0); }
		public LogicalUnaryOpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicalUnaryOp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExprListener ) ((PrefixExprListener)listener).enterLogicalUnaryOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixExprListener ) ((PrefixExprListener)listener).exitLogicalUnaryOp(this);
		}
	}

	public final LogicalUnaryOpContext logicalUnaryOp() throws RecognitionException {
		LogicalUnaryOpContext _localctx = new LogicalUnaryOpContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_logicalUnaryOp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(NOT);

			    ((LogicalUnaryOpContext)_localctx).str =  "not";

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
